--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
